# xutu

./: .gitignore  .mcp.json  .template.framework.md  .template.handoff.md  CLAUDE.md  README.md  _char_names.txt  _check_style.py  _edit_check.py  _fix_style.py  _style_report.txt  pyproject.toml  pytest.ini
.claude/: launch.json
.claude/skills/: novel-creation-wizard.md
.claude/templates/: chapter_agent.md  volume_review.md  volume_review_v2.md
.claude/workflows/: bedrock-chapter-edit.js  bedrock-chapter.js  bedrock-volume-review.js  chapter-pipeline.js
archive/legacy-pipeline/: CLAUDE_legacy_v2.md
archive/v1-间隙-初稿/: 2-核心设定.txt  3-分章大纲.txt  8-正文-第10章.txt  8-正文-第11章.txt  8-正文-第12章.txt  8-正文-第1章.txt  8-正文-第2章.txt  8-正文-第3章.txt  8-正文-第4章.txt  8-正文-第5章.txt  8-正文-第6章.txt  8-正文-第7章.txt  8-正文-第8章.txt  8-正文-第9章.txt  9-文学分析报告.txt  归档说明.txt
archive/v10-叙事深度验证/: outline.json  project.yaml  验证报告.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  find_python.ps1  graph.html  graph.json  manifest.json
novel_kg_mvp/: cli.py  config.yaml  config_loader.py  docker-compose.yml  extractor.py  graph.py  llm.py  main.py  mine.py  prompts.py  requirements.txt  validators.py
novel_mcp_server/: core.py  kg_json.py  kg_sync.py  mcp_cli.py  render_telemetry.py  server.py  telemetry.py  test_e2e.py  test_parallel.py  test_telemetry.py
scripts/: extract_reference_style.py  seed_bedrock_demo.py  seed_project.py  start_webui.bat
tests/: test_e2e.py  test_parallel.py
(+2051 files in other folders)
